--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Side Quests Vol. 1 - Various Artists</title>
+    <title>Cassette - Side Quests Vol. 1 - MYSTERY CLASS RECORDS</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon">
@@ -46,13 +46,13 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../images/products/mcr-001/mcr-001-full.webp" alt="Various Artists - Side Quests Vol. 1 Cassette">
+          <img src="../../images/products/mcr-001/mcr-001-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
           <h1 class="product-title">Side Quests Vol. 1<br>(pre-order)</h1>
           <div class="whitespace"></div>
-          <h2 class="product-artist">Various Artists</h2>
+          <h2 class="product-artist">MYSTERY CLASS RECORDS</h2>
           <div class="whitespace"></div>
           <p class="release-date">Release Date: February 21, 2025</p>
           <hr class="separator">
@@ -424,7 +424,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever volume of Mystery Class’s very own series, Side Quests, is here! This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        The first-ever volume of Mystery Class’s very own series, Side Quests, is here.<br><br>This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
         <br><br>
       </p>
       <p>
