--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -425,7 +425,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever Cryhard EP, Stretch Us Outta Here, now has its first-edition cassette run! Limited to just 25 units, this cassette also features three bonus tracks written around the same time this project was being made. It includes a Hi-Fi, real-time audio cassette, J-Slip, case, Bandcamp digital download code, and a numbered card (1–25).
+        The first-ever Cryhard EP, Stretch Us Outta Here, now has its first-edition cassette run.<br><br>Limited to just 25 units, this cassette also features three bonus tracks written around the same time this project was being made. It includes a Hi-Fi, real-time audio cassette, J-Slip, case, Bandcamp digital download code, and a numbered card (1–25).
       </p>
     </section>
 
@@ -446,12 +446,12 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../images/products/mcr-001/mcr-001.webp" alt="Various Artists - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                  <img src="../../images/products/mcr-001/mcr-001-hover.webp" alt="Various Artists - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">VARIOUS ARTISTS</p>
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
                     <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
