--- a/store/index.html
+++ b/store/index.html
@@ -52,12 +52,12 @@
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../images/products/mcr-001/mcr-001.webp" alt="Various Artists - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                <img src="../images/products/mcr-001/mcr-001-hover.webp" alt="Various Artists - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+                <img src="../images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+                <img src="../images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">VARIOUS ARTISTS</p>
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
                   <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                 </div>
                 <div class="merch-block-price-container">
