--- a/store/mcr-002v/index.html
+++ b/store/mcr-002v/index.html
@@ -102,7 +102,7 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Cryhard’s freshman album, Of Course I Will, now has its first-ever vinyl run! Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
+        Cryhard’s freshman album, Of Course I Will, now has its first-ever vinyl run. Featuring a beautiful sleeve, insert, and black vinyl. OCIW set them on a new path toward their now alt-rock, Midwest, and shoegaze sound. Get your first-edition copy while you can!
         <br><br>
       </p>
       <p>
@@ -144,12 +144,12 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../images/products/mcr-001/mcr-001.webp" alt="Various Artists - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                  <img src="../../images/products/mcr-001/mcr-001-hover.webp" alt="Various Artists - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+                  <img src="../../images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">VARIOUS ARTISTS</p>
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
                     <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
