added email to about page

--- a/about/index.html
+++ b/about/index.html
@@ -57,10 +57,11 @@
             HIFI in-house cassette duplication, graphic design, videography, marketing services, record deals, vinyl orders, and physical media distribution.
             <br><br>We’re here to boost the amazing talent coming from Oklahoma and strengthen our music community with the services we provide.
             We can’t wait to make some unexplainably good music with you!
-
-            <p class="mcr-signature"><br>— The MCR Team</p>
           </p>
+          <p class="mcr-signature"><br>— The MCR Team</p>
+          <a href="mailto:mysteryclassrecords@gmail.com">mysteryclassrecords@gmail.com</a>
         </div>
+        
       </div>
     </main>
 
