--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
       </div>
 
       <div class="release-text">
-      <h2 class="release-heading">LATEST RELEASE</h2>
-      <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
-      <div class="rainbow-underline"></div>
-      <p>
-        The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.
-      </p>
-      <p><strong>Limited to 25 copies.</strong></p>
-      <a href="store/mcr-001/" class="pre-order">
-        <img src="images/pre-order-button.svg" alt="Pre-Order Button">
-      </a>
+        <h2 class="release-heading">LATEST RELEASE</h2>
+        <h3 class="release-title">SIDE QUESTS VOL. 1</h3>
+        <div class="rainbow-underline"></div>
+        <p>
+          The first ever Mystery Class Records release. Nine tracks by Oklahoma artists compiled by our team to show off the massive talent in our community.
+        </p>
+        <p><strong>Limited to 25 copies.</strong></p>
+        <button class="pre-order-button" onclick="location.href='store/mcr-001/'">
+          ADD TO CART
+        </button>        
       </div>
     </div>
 
