added roster folder

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
       <nav class="nav">
         <a href="store">STORE</a>
+        <a href="roster">ROSTER</a>
         <a href="about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -188,6 +189,7 @@
         </div>
         <nav class="footer-nav">
           <a href="store">STORE</a>
+          <a href="roster">ROSTER</a>
           <a href="about">ABOUT</a>
         </nav>
       </div>
