--- a/store/index.html
+++ b/store/index.html
@@ -28,6 +28,7 @@
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
+        <a href="../roster">ROSTER</a>
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -157,7 +158,8 @@
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-            <a href="../about">ABOUT</a>
+          <a href="../roster">ROSTER</a>
+          <a href="../about">ABOUT</a>
         </nav>
       </div>
       <div class="footer-horizontal-separator"></div>
