--- a/store/mcr-002/index.html
+++ b/store/mcr-002/index.html
@@ -28,6 +28,7 @@
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -538,6 +539,7 @@
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
