refactored folder structer

--- a/dev-resources/under-construction.html
+++ b/dev-resources/under-construction.html
@@ -14,5 +14,5 @@
 
 <!-- Under Construction Redirect -->
 <!-- <script>
-    window.location.href = "/under-construction.html";
+    window.location.href = "/dev-resources/under-construction.html";
   </script> -->
