--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <!-- Under Construction Redirect -->
-    <script>
-      window.location.href = "/under-construction.html";
-    </script>
-
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +12,9 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../shared-styles/global.css">
-    <link rel="stylesheet" href="../../shared-styles/header.css">
-    <link rel="stylesheet" href="../../shared-styles/footer.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
     <link rel="stylesheet" href="cryhard.css">
   </head>
   
@@ -84,7 +78,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../images/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
         <!-- Merch Content -->
@@ -177,7 +171,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../images/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
     </section>
