--- a/store/index.html
+++ b/store/index.html
@@ -12,9 +12,9 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../shared-styles/global.css">
-    <link rel="stylesheet" href="../shared-styles/header.css">
-    <link rel="stylesheet" href="../shared-styles/footer.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
     <link rel="stylesheet" href="store.css">
   </head>
 
@@ -189,9 +189,9 @@
     </footer>
 
       <!-- Scripts -->
-      <script src="../scripts/CartToggleSticky.js" async></script>
-      <script src="../scripts/MobileHeaderExpand.js"></script>
-      <script src="../scripts/MerchBlockScrollSwap.js"></script>
+      <script src="../dev-resources/scripts/CartToggleSticky.js" async></script>
+      <script src="../dev-resources/scripts/MobileHeaderExpand.js"></script>
+      <script src="../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
