--- a/roster/index.html
+++ b/roster/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <!-- Under Construction Redirect -->
-    <script>
-      window.location.href = "/under-construction.html";
-    </script>
-
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +12,9 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../shared-styles/global.css">
-    <link rel="stylesheet" href="../shared-styles/header.css">
-    <link rel="stylesheet" href="../shared-styles/footer.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
+    <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
     <link rel="stylesheet" href="artists.css">
   </head>
   
