--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -12,10 +12,10 @@
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../shared-styles/global.css">
-    <link rel="stylesheet" href="../../shared-styles/header.css">
-    <link rel="stylesheet" href="../../shared-styles/footer.css">
-    <link rel="stylesheet" href="../../shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/product-page.css">
   </head>
   
   <body>
@@ -438,7 +438,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../images/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
         <!-- Store Section -->
@@ -524,7 +524,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../images/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
     </section>
@@ -573,10 +573,10 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../../scripts/CartRefresh.js" async></script>
-    <script src="../../scripts/MobileHeaderExpand.js"></script>
-    <script src="../../scripts/ProductZoom.js"></script>
-    <script src="../../scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../dev-resources/scripts/CartRefresh.js" async></script>
+    <script src="../../dev-resources/scripts/MobileHeaderExpand.js"></script>
+    <script src="../../dev-resources/scripts/ProductZoom.js"></script>
+    <script src="../../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
