started artist page based off of recommended merch blocks

--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -433,7 +433,7 @@
       </p>
     </section>
 
-    <!-- Related Merch Section (Updated with Store Section from Homepage) -->
+    <!-- Related Merch Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
