--- a/roster/index.html
+++ b/roster/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artists - Mystery Class Records</title>
+    <title>Roster - Mystery Class Records</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
     <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
     <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
-    <link rel="stylesheet" href="artists.css">
+    <link rel="stylesheet" href="roster.css">
   </head>
-  
+
   <body>
     <!-- Header Section -->
     <header class="header" data-expanded="false">
@@ -42,71 +42,107 @@
     </header>
     <div class="rainbow-strip"></div>
     <div class="header-spacer"></div>
-
+    
     <!-- Roster Section -->
-    <section class="related-merch-section">
-      <div class="related-merch-content">    
-        <!-- Store Section -->
-        <div class="store-section">
-          <h2 class="store-heading">RELATED</h2>
-          <div class="store-grid">
-
-            <a href="../mcr-002/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+    <main class="store-section">
+      <div class="store-container">
+        <h1 class="store-heading">ROSTER</h1>
+        <div class="store-grid">
+    
+          <a href="mcr-001/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
                 </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a href="../mcr-003/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+          <a href="mcr-002/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - CASSETTE</p>
                 </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
 
-            <a href="../new-001/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+          <!-- <a href="mcr-002v/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
                 </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Portable Cassette Player</p>
-                    <p class="merch-block-product-name">Transparent</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$25</div>
-                  </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$30</div>
                 </div>
               </div>
-            </a>    
+            </div>
+          </a> -->
 
-          </div>
+          <a href="mcr-003/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">CRYHARD</p>
+                  <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="new-001/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
+                <img src="../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">Portable Cassette Player</p>
+                  <p class="merch-block-product-name">Transparent</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$25</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+
         </div>
+      </div>
+    </main>
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -151,7 +187,10 @@
       </div>
     </footer>
 
-    <!-- Scripts -->
+      <!-- Scripts -->
+      <script src="../dev-resources/scripts/CartToggleSticky.js" async></script>
+      <script src="../dev-resources/scripts/MobileHeaderExpand.js"></script>
+      <script src="../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
