--- a/roster/index.html
+++ b/roster/index.html
@@ -44,96 +44,92 @@
     <div class="header-spacer"></div>
     
     <!-- Roster Section -->
-    <main class="store-section">
-      <div class="store-container">
-        <h1 class="store-heading">ROSTER</h1>
-        <div class="store-grid">
+    <main class="roster-section">
+      <div class="roster-container">
+        <h1 class="roster-heading">ROSTER</h1>
+        <div class="roster-grid">
     
-          <a href="mcr-001/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+          <a href="mcr-001/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="artist-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="artist-block-product-image hover-image">
               </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
-                  <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-names-container">
+                  <p class="artist-block-artist-name">Cryhard</p>
                 </div>
               </div>
             </div>
           </a>
 
-          <a href="mcr-002/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+          <a href="mcr-002/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="artist-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="artist-block-product-image hover-image">
               </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - CASSETTE</p>
+              <div class="artist-block-details-container">
+                <div class="artist-block-names-container">
+                  <p class="artist-block-artist-name">CRYHARD</p>
+                  <p class="artist-block-product-name">OF COURSE I WILL - CASSETTE</p>
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                <div class="artist-block-price-container">
+                  <div class="artist-block-price">$10</div>
                 </div>
               </div>
             </div>
           </a>
 
-          <!-- <a href="mcr-002v/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+          <!-- <a href="mcr-002v/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="artist-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="artist-block-product-image hover-image">
               </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+              <div class="artist-block-details-container">
+                <div class="artist-block-names-container">
+                  <p class="artist-block-artist-name">CRYHARD</p>
+                  <p class="artist-block-product-name">OF COURSE I WILL - VINYL</p>
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$30</div>
+                <div class="artist-block-price-container">
+                  <div class="artist-block-price">$30</div>
                 </div>
               </div>
             </div>
           </a> -->
 
-          <a href="mcr-003/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+          <a href="mcr-003/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="artist-block-product-image default-image">
+                <img src="../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="artist-block-product-image hover-image">
               </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">CRYHARD</p>
-                  <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
+              <div class="artist-block-details-container">
+                <div class="artist-block-names-container">
+                  <p class="artist-block-artist-name">CRYHARD</p>
+                  <p class="artist-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                <div class="artist-block-price-container">
+                  <div class="artist-block-price">$10</div>
                 </div>
               </div>
             </div>
           </a>
 
-          <a href="new-001/" class="merch-link">
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+          <a href="new-001/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="artist-block-product-image default-image">
+                <img src="../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="artist-block-product-image hover-image">
               </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <p class="merch-block-artist-name">Portable Cassette Player</p>
-                  <p class="merch-block-product-name">Transparent</p>
+              <div class="artist-block-details-container">
+                <div class="artist-block-names-container">
+                  <p class="artist-block-artist-name">Portable Cassette Player</p>
+                  <p class="artist-block-product-name">Transparent</p>
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$25</div>
+                <div class="artist-block-price-container">
+                  <div class="artist-block-price">$25</div>
                 </div>
               </div>
             </div>
