--- a/roster/index.html
+++ b/roster/index.html
@@ -49,92 +49,83 @@
         <h1 class="roster-heading">ROSTER</h1>
         <div class="roster-grid">
     
-          <a href="mcr-001/" class="artist-link">
+          <a href="acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="artist-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="artist-block-product-image hover-image">
+                <img src="../dev-resources\images\roster\acid-baptism\roster-pic.webp" alt="Acid Baptism Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
-                <div class="artist-block-names-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Acid Baptism</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="cryhard/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources\images\roster\cryhard\roster-pic.webp" alt="Cryhard Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
                   <p class="artist-block-artist-name">Cryhard</p>
                 </div>
               </div>
             </div>
           </a>
 
-          <a href="mcr-002/" class="artist-link">
+          <a href="donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="artist-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="artist-block-product-image hover-image">
+                <img src="../dev-resources\images\roster\donovan-funk\roster-pic.webp" alt="Donovan Funk Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
-                <div class="artist-block-names-container">
-                  <p class="artist-block-artist-name">CRYHARD</p>
-                  <p class="artist-block-product-name">OF COURSE I WILL - CASSETTE</p>
-                </div>
-                <div class="artist-block-price-container">
-                  <div class="artist-block-price">$10</div>
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Donovan Funk</p>
                 </div>
               </div>
             </div>
           </a>
 
-          <!-- <a href="mcr-002v/" class="artist-link">
+          <a href="idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="artist-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="artist-block-product-image hover-image">
+                <img src="../dev-resources\images\roster\idiot-mile\roster-pic.webp" alt="Idiot Mile Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
-                <div class="artist-block-names-container">
-                  <p class="artist-block-artist-name">CRYHARD</p>
-                  <p class="artist-block-product-name">OF COURSE I WILL - VINYL</p>
-                </div>
-                <div class="artist-block-price-container">
-                  <div class="artist-block-price">$30</div>
-                </div>
-              </div>
-            </div>
-          </a> -->
-
-          <a href="mcr-003/" class="artist-link">
-            <div class="artist-block">
-              <div class="artist-block-image-container">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="artist-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="artist-block-product-image hover-image">
-              </div>
-              <div class="artist-block-details-container">
-                <div class="artist-block-names-container">
-                  <p class="artist-block-artist-name">CRYHARD</p>
-                  <p class="artist-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
-                </div>
-                <div class="artist-block-price-container">
-                  <div class="artist-block-price">$10</div>
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Idiot Mile</p>
                 </div>
               </div>
             </div>
           </a>
 
-          <a href="new-001/" class="artist-link">
+          <a href="sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="artist-block-product-image default-image">
-                <img src="../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="artist-block-product-image hover-image">
+                <img src="../dev-resources\images\roster\sweetest-pot\roster-pic.webp" alt="Sweetest Pot Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
-                <div class="artist-block-names-container">
-                  <p class="artist-block-artist-name">Portable Cassette Player</p>
-                  <p class="artist-block-product-name">Transparent</p>
-                </div>
-                <div class="artist-block-price-container">
-                  <div class="artist-block-price">$25</div>
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Sweetest Pot</p>
                 </div>
               </div>
             </div>
           </a>
 
+          <a href="toad-socks/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../dev-resources\images\roster\toad-socks\roster-pic.webp" alt="Toad Socks Roster Image" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Toad Socks</p>
+                </div>
+              </div>
+            </div>
+          </a>
 
         </div>
       </div>
