--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- Under Construction Redirect -->
+<script>
+  window.location.href = "/dev-resources/under-construction.html";
+</script>
+
 <html lang="en">
   <head>
     <!-- Metadata and Page Settings -->
