--- a/store/new-001/index.html
+++ b/store/new-001/index.html
@@ -28,7 +28,7 @@
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <a href="../../roster">ROSTER</a>
+      <!-- <a href="../../roster">ROSTER</a> -->
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -535,7 +535,7 @@
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <a href="../../roster">ROSTER</a>
+          <!-- <a href="../../roster">ROSTER</a> -->
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
