all product pages made

--- a/store/mcr-005/index.html
+++ b/store/mcr-005/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Pond - Toad Socks</title>
+    <title>Cassette - Burner Tape, Vol. 2 - Sweetest Pot</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
@@ -47,15 +47,15 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../dev-resources/images/products/mcr-004/mcr-004-full.webp" alt="Toad Socks - Pond">
+          <img src="../../dev-resources/images/products/mcr-005/mcr-005-full.webp" alt="Sweetest Pot - Burner Tape, Vol. 2">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">POND</h1>
+          <h1 class="product-title">Burner Tape, Vol. 2</h1>
           <div class="whitespace"></div>
-          <h2 class="product-artist">Toad Socks</h2>
+          <h2 class="product-artist">Sweetest Pot</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: December 5, 2021</p>
+          <p class="release-date">Release Date: September 30, 2022</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
@@ -397,19 +397,19 @@
             <h3>Track List</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Afro Boy</li>
-              <li>Space Jam</li>
-              <li>Blessed Sunday</li>
-              <li>Leak 1</li>
-              <li>Jergins</li>
-              <li>Sunset at the Trailer Park</li>
-              <li>Shit Creek</li>
-              <li>Darth Vader Playtime</li>
-              <li>Leak 2</li>
-              <li>Toad Crossing</li>
-              <h3>Bonus Track</h3>
+              <li>Flowers</li>
+              <li>Gondolas Row</li>
+              <li>Shrine</li>
+              <li>Benedryl</li>
+              <li>Club 54</li>
+              <li>Sashas Bodega</li>
+              <li>Canals</li>
+              <li>One Sided Victories</li>
+              <h3>Bonus Tracks</h3>
               <div class="whitespace"></div>
-              <li>Eastcreek Slowdance</li>
+              <li>Bridges</li>
+              <li>Fumble</li>
+              <li>LCD-10</li>
             </ol>
           </div>
           <hr class="separator">
@@ -417,8 +417,8 @@
             <h3>Product Info:</h3>
             <div class="whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
-            <p>Solid Green Cassette x20</p>
-            <p>MCR-004</p>
+            <p>Transparent Blue Cassette x25</p>
+            <p>MCR-005</p>
           </div>
         </div>
       </div>
@@ -428,8 +428,8 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The underground musical project of Toad Socks gets its first physical media release with the cassette of Pond.
-        <br><br>Comes with a beautiful solid green tape, reimagined cover art J-slip, clear case, and numbered card.
+        The first ever Sweetest Pot physical release is here. Burner Tape Vol. 2 blends elements of hip-hop, pop, electronic, and experimental.
+        <br><br>This beautifully packaged release comes with transparent blue cassette, fold out J-slip, case, and numbered production card. Get one while you can! Limited to 25.
       </p>
     </section>
 
