--- a/store/new-005/index.html
+++ b/store/new-005/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Pond - Toad Socks</title>
+    <title>Hat - Mystery Class Records</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
@@ -47,21 +47,20 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../dev-resources/images/products/mcr-004/mcr-004-full.webp" alt="Toad Socks - Pond">
+          <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Hat - Mystery Class Records">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">POND</h1>
+          <h1 class="product-title">Hat</h1>
           <div class="whitespace"></div>
-          <h2 class="product-artist">Toad Socks</h2>
+          <h2 class="product-artist">Black Corduroy</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: December 5, 2021</p>
           <hr class="separator">
           <div class="price-and-button">
-            <span class="product-price">$10</span>
+            <span class="product-price">$30</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1738351656491'></div>
+              <div id='product-component-1738351832584'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -89,8 +88,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7737945980982',
-                      node: document.getElementById('product-component-1738351656491'),
+                      id: '7733217722422',
+                      node: document.getElementById('product-component-1738351832584'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -394,31 +393,22 @@
           </div>
           <hr class="separator">
           <div class="track-list">
-            <h3>Track List</h3>
+            <h3>Care Instructions</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Afro Boy</li>
-              <li>Space Jam</li>
-              <li>Blessed Sunday</li>
-              <li>Leak 1</li>
-              <li>Jergins</li>
-              <li>Sunset at the Trailer Park</li>
-              <li>Shit Creek</li>
-              <li>Darth Vader Playtime</li>
-              <li>Leak 2</li>
-              <li>Toad Crossing</li>
-              <h3>Bonus Track</h3>
-              <div class="whitespace"></div>
-              <li>Eastcreek Slowdance</li>
+              <li>Spot clean with a damp cloth.</li>
+              <li>Hand wash gently in cold water if needed.</li>
+              <li>Do not bleach or tumble dry.</li>
+              <li>Reshape while damp and air dry.</li>
             </ol>
           </div>
           <hr class="separator">
           <div class="pressing-info">
-            <h3>Product Info:</h3>
+            <h3>Product Specs:</h3>
             <div class="whitespace"></div>
-            <p>First Edition Real-Time Dubbed</p>
-            <p>Solid Green Cassette x20</p>
-            <p>MCR-004</p>
+            <p>100% Cotton</p>
+            <p>Embroidered <i>Mystery Class Records</i> Logo</p>
+            <p>Adjustable Strap with Metal Buckle</p>
           </div>
         </div>
       </div>
@@ -428,8 +418,9 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The underground musical project of Toad Socks gets its first physical media release with the cassette of Pond.
-        <br><br>Comes with a beautiful solid green tape, reimagined cover art J-slip, clear case, and numbered card.
+        First ever piece of MCR merch is here!
+        <br><br>A sleek and comfortable black corduroy hat with the Mystery Class Records logo.
+
       </p>
     </section>
 
@@ -483,19 +474,19 @@
               </div>
             </a>
 
-            <a href="../new-001/" class="merch-link">
+            <a href="../mcr-003/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Portable Cassette Player</p>
-                    <p class="merch-block-product-name">Transparent</p>
+                    <p class="merch-block-artist-name">CRYHARD</p>
+                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
-                    <div class="merch-block-price">$25</div>
+                    <div class="merch-block-price">$10</div>
                   </div>
                 </div>
               </div>
