all store and home page blocks added

--- a/index.html
+++ b/index.html
@@ -154,11 +154,47 @@
           </div>
         </a>
 
+        <a href="store/mcr-004/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="dev-resources/images/products/mcr-004/mcr-004.webp" alt="Toad Socks - Pond Cassette" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Toad Socks - Pond Cassette (Hover)" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">TOAD SOCKS</p>
+                <p class="merch-block-product-name">POND - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="store/mcr-005/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="dev-resources/images/products/mcr-005/mcr-005.webp" alt="Sweetest Pot - Burner Tape, Vol. 2 Cassette" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Sweetest Pot - Burner Tape, Vol. 2 Cassette (Hover)" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Sweetest Pot</p>
+                <p class="merch-block-product-name">Burner Tape, Vol. 2 - CASSETTE</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
         <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
               <img src="dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent (Hover)" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -167,6 +203,24 @@
               </div>
               <div class="merch-block-price-container">
                 <div class="merch-block-price">$25</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="store/new-005/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="dev-resources/images/products/new-005/new-005.webp" alt="Hat - Mystery Class Records" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/new-005/new-005-hover.webp" alt="Hat - Mystery Class Records (Hover)" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Hat</p>
+                <p class="merch-block-product-name">Black Corduroy</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$30</div>
               </div>
             </div>
           </div>
