--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <a href="store/mcr-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -103,8 +103,8 @@
         <a href="store/mcr-002/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -121,8 +121,8 @@
         <!-- <a href="store/mcr-002v/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -139,8 +139,8 @@
         <a href="store/mcr-003/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-003/mcr-003.webp" alt="Cryhard - Stretch Us Outta Here Cassette" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Cryhard - Stretch Us Outta Here Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -157,8 +157,8 @@
         <a href="store/mcr-004/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-004/mcr-004.webp" alt="Toad Socks - Pond Cassette" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Toad Socks - Pond Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -175,8 +175,8 @@
         <a href="store/mcr-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/mcr-005/mcr-005.webp" alt="Sweetest Pot - Burner Tape, Vol. 2 Cassette" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Sweetest Pot - Burner Tape, Vol. 2 Cassette (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -193,8 +193,8 @@
         <a href="store/new-001/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
@@ -211,8 +211,8 @@
         <a href="store/new-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
-              <img src="dev-resources/images/products/new-005/new-005.webp" alt="Hat - Mystery Class Records" class="merch-block-product-image default-image">
-              <img src="dev-resources/images/products/new-005/new-005-hover.webp" alt="Hat - Mystery Class Records (Hover)" class="merch-block-product-image hover-image">
+              <img src="dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
             </div>
             <div class="merch-block-details-container">
               <div class="merch-block-names-container">
